dev/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: static-web-deployment
  namespace: sample
spec:
  replicas: 4
  template:
    metadata:
      labels:
        app: static-app
    spec:
      containers:
      - name: static-app-container
        image: safernandez666/app:latest
        ports:
        - containerPort: 80
  selector:
    matchLabels:
      app: static-app
