dev/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: static-web-service
  namespace: sample
spec:
  ports:
    - port: 80
  selector:
    app: static-app
